# draw

./: CMakeLists.txt  README.md  billboard.cpp  billboard.hpp  box.cpp  box.hpp  dumb.cpp  fbloop.cpp  fbo.cpp  fbo.h  fbotest.cpp  gl_shared.hpp  glfw_app.cpp  glfw_app.hpp  hmd_dist_mesh.cpp  hmd_dist_mesh.h  imp.cpp  main.cpp  meshtest.cpp  model.cpp  model.hpp  particle_buffer.cpp  particle_buffer.h  point.cpp  q.cpp  rift_in_action.h  scene.hpp  shader.cpp  shader.hpp  simple_file.cpp  simple_file.hpp  tfb.cpp  vertex_format.h  watcher.cpp  watcher.h  xformfbnew.cpp  xformfbtest.cpp
cmake/: FindGLFW3.cmake
conf/: read.cc
glsl/: 1.fs.glsl  1.vs.glsl  2.fs.glsl  2.vs.glsl  3.fs.glsl  3.vs.glsl  dest.fs.glsl  dest2.fs.glsl  dest2.vs.glsl
